<resources>
    <string name="app_name">Foreign Teacher</string>
    <string name="warn_premission">权限不全</string>
    <string name="login_heyllo">Login Heyllo</string>
    <string name="login_input_pwd">Password</string>
    <string name="login_commit">Login</string>
    <string name="login_forget_pwd">Forget Password</string>
    <string name="login_input_phone">Phone Number</string>
    <string name="login_to_register">Register</string>
    <string name="error_unable_to_connect">connect error</string>
    <string name="error_timeout">connect time out</string>
    <string name="error_unknown">unknown error</string>
    <string name="log_register_heyllo">Register Heyllo</string>
    <string name="login_input_verification_code">Code</string>
    <string name="login_get_verification_code">Get Code</string>
    <string name="login_next">Next</string>
    <string name="log_type_register">By registering,you are agree to</string>
    <string name="service_agreement">" "our Use Agreement</string>
    <string name="msg_sended">Message has been sent</string>
    <string name="log_pwd">Password</string>
    <string name="log_repeat_pwd">Retype Password</string>
    <string name="register_ok">Register ok</string>
    <string name="login_to_login">Login</string>
    <string name="login_register">Register</string>
    <string name="back_to_login">Back to login</string>
    <string name="find_pwd">Password Retrieval</string>
    <string name="reset_pwd_success">Reset password sucess</string>
    <string name="log_bind_phone">Binding cell phone number</string>
    <string name="schedule">Schedule</string>
    <string name="order">Order</string>
    <string name="square">Square</string>
    <string name="msg">Message</string>
    <string name="mine">Mine</string>
    <string name="person_infomation">Person Information</string>
    <string name="edit_name_hint">Pick a name easy to remember</string>
    <string name="edit_contact_number_hint">Mobile number</string>
    <string name="edit_introduction">Make your introduction catchy more orders</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="person_information">Person Information</string>
    <string name="save">Save</string>
    <string name="user_agreement">User agreement</string>
    <string name="feed">Feed</string>
    <string name="all_comment">Comment</string>
    <string name="inform_reason">Report resons</string>
    <string name="violation_user_name">Violation user name</string>
    <string name="lewd_or_harassing_content">Lewd or harassing content</string>
    <string name="fraud">Fraud</string>
    <string name="false_info">False info</string>
    <string name="ads_promotion">Ads promotion</string>
    <string name="harassing">Harassing</string>
    <string name="other_reason">Other reasons</string>
    <string name="commit">Commit</string>
    <string name="level">Level</string>
    <string name="accomplishment">Accomplishment</string>
    <string name="total_learning_hour">Total learning hour</string>
    <string name="teachers">Teachers</string>
    <string name="average_time">Average learning hour in a week</string>
    <string name="hour_length">%1$f hours</string>
    <string name="longest_session">Longest_session</string>
    <string name="chat">Chat</string>
    <string name="offers">Offers</string>
    <string name="info">Info</string>
    <string name="country">Country</string>
    <string name="verification">Verification</string>
    <string name="languages">Languages</string>
    <string name="chinese_level">Chinese level</string>
    <string name="introduction">Introduction</string>
    <string name="feeds">Feeds</string>
    <string name="user_comment">User\'s comment</string>
    <string name="evaluate_count">( %1$d )</string>
    <string name="price_at_least">¥%1$d/hour</string>
    <string name="price_class">¥%1$d</string>
    <string name="orders">Orders</string>
    <string name="group_orders">Group orders</string>
    <string name="ages">Age: %1$d</string>
    <string name="attending_clients">Attending clients</string>
    <string name="client_count">¥%1$d people</string>
    <string name="time">Time</string>
    <string name="accept">Accept</string>
    <string name="comfire_and_accept_order">Comfire and accept order</string>
    <string name="error_pic_type">Error picture</string>
    <string name="wallet">Wallet</string>
    <string name="invite">Invite</string>
    <string name="comment">Comment</string>
    <string name="share_to_friends">Share to friends</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="teaching_certificate">Teaching certificate</string>
    <string name="native_speaker">Native Speaker</string>
    <string name="passport">Passport</string>
    <string name="valid_visa">Valid visa</string>
    <string name="verified">verified</string>
    <string name="minmum">Minmum ￥%1$d</string>
    <string name="cancel_order_count">Canceled orders %1$d</string>
    <string name="with_draw">Withdraw</string>
    <string name="no_search_results">No search results</string>


    <string name="facebook_app_id">487692214752558</string>
    <string name="delete_record">Are you sure you want to delete this record?</string>
    <string name="cancel_confirm">Cancel Confirm</string>
    <string name="cancel_reason">Me-Cancellation Reason</string>
    <string name="cancel_confirm_info">Canceling accepted orders will add
        \n up on your cancel rate,this might \n affect client‘s choice.
        \n Are you sure you have to cancel \n this confirmed order?</string>
    <string name="charging_rules">Charging rules</string>
    <string name="attending_client">attending client:%1$d</string>
    <string name="person_count">¥%1$d/person</string>

</resources>
