<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <cn.sinata.xldutils.view.TitleBar
        android:id="@id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_title_top_margin"
        android:gravity="center">

        <View
            android:layout_width="7dp"
            android:layout_height="27dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/left_radio_view" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/style_login_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/log_register_heyllo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_pwd"
            style="@style/style_login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@color/white"
            android:drawableLeft="@mipmap/icon_pwd"
            android:drawablePadding="24dp"
            android:hint="@string/log_pwd"
            android:inputType="textPassword"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="17dp"
            android:background="@color/color_gray_divider" />

        <EditText
            android:id="@+id/et_pwd_repeat"
            style="@style/style_login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@color/white"
            android:drawableLeft="@mipmap/icon_pwd"
            android:drawablePadding="24dp"
            android:hint="@string/log_repeat_pwd"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/btn_login_commit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_commit_height"
            android:layout_marginTop="41dp"
            android:background="@drawable/login_bg_commit"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/login_commit"
            android:textColor="@color/selector_btn_commit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_agreement_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_type_register"
            android:textColor="@color/color_grey_999999"
            android:textSize="@dimen/text_12" />

        <TextView
            android:id="@+id/tv_service_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_agreement"
            android:textColor="@color/color_black_666666"
            android:textSize="@dimen/text_12" />

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="及"-->
            <!--android:textColor="@color/color_grey_999999"-->
            <!--android:textSize="@dimen/text_12" />-->

        <!--<TextView-->
            <!--android:id="@+id/tv_privacy_agreement"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/privacy_agreement"-->
            <!--android:textColor="@color/color_black_666666"-->
            <!--android:textSize="@dimen/text_12" />-->
    </LinearLayout>
</LinearLayout>