<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <cn.sinata.xldutils.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_title_top_margin">
        <View
            android:layout_marginLeft="1dp"
            android:layout_width="7dp"
            android:layout_height="27dp"
            android:background="@drawable/left_radio_view"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_heyllo"
            style="@style/style_login_tv_title"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <com.whynuttalk.foreignteacher.views.PhoneNumEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@mipmap/icon_phone"
            android:drawablePadding="24dp"
            android:hint="@string/login_input_phone"
            android:maxLength="13"
            style="@style/style_login_input"
            android:layout_marginTop="70dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_gray_divider"
            android:layout_marginTop="15dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawablePadding="24dp"
                android:inputType="textPassword"
                android:hint="@string/login_input_pwd"
                android:drawableStart="@mipmap/icon_pwd"
                android:drawableLeft="@mipmap/icon_pwd"
                android:layout_marginTop="17dp"
                style="@style/style_login_input"
               />
            <CheckBox
                android:id="@+id/ck_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginRight="@dimen/dp_8"
                style="@style/style_password_toggle"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_gray_divider"
            android:layout_marginTop="17dp"/>

        <TextView
            android:id="@+id/btn_login_commit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_commit_height"
            android:text="@string/login_commit"
            android:gravity="center"
            android:layout_marginTop="41dp"
            android:enabled="false"
            android:textColor="@color/selector_btn_commit"
            android:background="@drawable/login_bg_commit"/>
        <TextView
            android:id="@+id/tv_login_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_pwd"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>
    </LinearLayout>


</LinearLayout>